--- a/1-100.md
+++ b/1-100.md
@@ -1060,3 +1060,371 @@ Which solution meets these requirements and is the MOST operationally efficient?
 - B. Use Amazon CloudWatch metrics to analyze the application performance history to determine the servers' peak utilization during the performance failures. Increase the size of the application server's Amazon EC2 instances to meet the peak requirements.
 - C. Use Amazon Simple Notification Service (Amazon SNS) to handle the messaging between application servers running on Amazon EC2 in an Auto Scaling group. Use Amazon CloudWatch to monitor the SNS queue length and scale up and down as required.
 - D. Use Amazon Simple Queue Service (Amazon SQS) to handle the messaging between application servers running on Amazon EC2 in an Auto Scaling group. Use Amazon CloudWatch to monitor the SQS queue length and scale up when communication failures are detected.
+
+A - keep it simple: API Gateway + Lambda + SQS
+D won't work: it relies upon a failure detected - by then its too late)
+
+A
+
+## 76 - 100
+### 76
+A company receives 10 TB of instrumentation data each day from several machines located at a single factory. The data consists of JSON files stored on a storage area network (SAN) in an on-premises data center located within the factory. The company wants to send this data to Amazon S3 where it can be accessed by several additional systems that provide critical near-real-time analytics. A secure transfer is important because the data is considered sensitive.  
+Which solution offers the MOST reliable data transfer?
+
+- A. AWS DataSync over public internet
+- B. AWS DataSync over AWS Direct Connect
+- C. AWS Database Migration Service (AWS DMS) over public internet
+- D. AWS Database Migration Service (AWS DMS) over AWS Direct Connect
+
+DMS is for databases and here refers to “JSON files”. Public internet is not reliable. So best option is B.
+
+AWS DataSync is a data transfer service that uses network optimization techniques to transfer data efficiently and securely between on-premises storage systems and Amazon S3 or other storage targets. When used over AWS Direct Connect, DataSync can provide a dedicated and secure network connection between your on-premises data center and AWS. This can help to ensure a more reliable and secure data transfer compared to using the public internet.
+
+B
+
+### 77
+A company needs to configure a real-time data ingestion architecture for its application. The company needs an API, a process that transforms data as the data is streamed, and a storage solution for the data.  
+Which solution will meet these requirements with the LEAST operational overhead?
+
+- A. Deploy an Amazon EC2 instance to host an API that sends data to an Amazon Kinesis data stream. Create an Amazon Kinesis Data Firehose delivery stream that uses the Kinesis data stream as a data source. Use AWS Lambda functions to transform the data. Use the Kinesis Data Firehose delivery stream to send the data to Amazon S3.
+- B. Deploy an Amazon EC2 instance to host an API that sends data to AWS Glue. Stop source/destination checking on the EC2 instance. Use AWS Glue to transform the data and to send the data to Amazon S3.
+- C. Configure an Amazon API Gateway API to send data to an Amazon Kinesis data stream. Create an Amazon Kinesis Data Firehose delivery stream that uses the Kinesis data stream as a data source. Use AWS Lambda functions to transform the data. Use the Kinesis Data Firehose delivery stream to send the data to Amazon S3.
+- D. Configure an Amazon API Gateway API to send data to AWS Glue. Use AWS Lambda functions to transform the data. Use AWS Glue to send the data to Amazon S3.
+
+(A) - You don't need to deploy an EC2 instance to host an API - Operational overhead
+(B) - Same as A
+(**C**) - Is the answer
+(D) - AWS Glue gets data from S3, not from API GW. AWS Glue could do ETL by itself, so don't need lambda. Non sense. https://aws.amazon.com/glue/
+ETL stands for "==extract, transform, load=="
+
+_AWS Glue_ Streaming, a component of _AWS Glue_, enables you to efficiently handle streaming data in near _real-time_, empowering you to carry out crucial tasks.
+
+C
+
+### 78
+A company needs to keep user transaction data in an Amazon DynamoDB table. The company must retain the data for 7 years.  
+What is the MOST operationally efficient solution that meets these requirements?
+
+- A. Use DynamoDB point-in-time recovery to back up the table continuously.
+- B. Use AWS Backup to create backup schedules and retention policies for the table.
+- C. Create an on-demand backup of the table by using the DynamoDB console. Store the backup in an Amazon S3 bucket. Set an S3 Lifecycle configuration for the S3 bucket.
+- D. Create an Amazon EventBridge (Amazon CloudWatch Events) rule to invoke an AWS Lambda function. Configure the Lambda function to back up the table and to store the backup in an Amazon S3 bucket. Set an S3 Lifecycle configuration for the S3 bucket.
+
+Backup As A Service - AWS Backup
+AWS Backup lets you centrally manage and automate backups across AWS services and third-party applications.
+
+B
+
+### 79
+A company is planning to use an Amazon DynamoDB table for data storage. The company is concerned about cost optimization. The table will not be used on most mornings. In the evenings, the read and write traffic will often be unpredictable. When traffic spikes occur, they will happen very quickly.  
+What should a solutions architect recommend?
+
+- A. Create a DynamoDB table in on-demand capacity mode.
+- B. Create a DynamoDB table with a global secondary index.
+- C. Create a DynamoDB table with provisioned capacity and auto scaling.
+- D. Create a DynamoDB table in provisioned capacity mode, and configure it as a global table.
+
+On-demand mode is a good option if any of the following are true:
+- You create new tables with unknown workloads.
+- You have unpredictable application traffic.
+- You prefer the ease of paying for only what you use.
+
+A
+
+### 80
+A company recently signed a contract with an AWS Managed Service Provider (MSP) Partner for help with an application migration initiative. A solutions architect needs to share an Amazon Machine Image (AMI) from an existing AWS account with the MSP Partner's AWS account. The AMI is backed by Amazon Elastic Block Store (Amazon EBS) and uses an AWS Key Management Service (AWS KMS) customer managed key to encrypt EBS volume snapshots.  
+What is the MOST secure way for the solutions architect to share the AMI with the MSP Partner's AWS account?
+
+- A. Make the encrypted AMI and snapshots publicly available. Modify the key policy to allow the MSP Partner's AWS account to use the key.
+- B. Modify the launchPermission property of the AMI. Share the AMI with the MSP Partner's AWS account only. Modify the key policy to allow the MSP Partner's AWS account to use the key.
+- C. Modify the launchPermission property of the AMI. Share the AMI with the MSP Partner's AWS account only. Modify the key policy to trust a new KMS key that is owned by the MSP Partner for encryption.
+- D. Export the AMI from the source account to an Amazon S3 bucket in the MSP Partner's AWS account, Encrypt the S3 bucket with a new KMS key that is owned by the MSP Partner. Copy and launch the AMI in the MSP Partner's AWS account.
+
+Cross-account permission is limited so its okey to sharing KMS key to other account
+
+B
+### 81
+
+A solutions architect is designing the cloud architecture for a new application being deployed on AWS. The process should run in parallel while adding and removing application nodes as needed based on the number of jobs to be processed. The processor application is stateless. The solutions architect must ensure that the application is loosely coupled and the job items are durably stored.  
+Which design should the solutions architect use?
+
+- A. Create an Amazon SNS topic to send the jobs that need to be processed. Create an Amazon Machine Image (AMI) that consists of the processor application. Create a launch configuration that uses the AMI. Create an Auto Scaling group using the launch configuration. Set the scaling policy for the Auto Scaling group to add and remove nodes based on CPU usage.
+- B. Create an Amazon SQS queue to hold the jobs that need to be processed. Create an Amazon Machine Image (AMI) that consists of the processor application. Create a launch configuration that uses the AMI. Create an Auto Scaling group using the launch configuration. Set the scaling policy for the Auto Scaling group to add and remove nodes based on network usage.
+- C. Create an Amazon SQS queue to hold the jobs that need to be processed. Create an Amazon Machine Image (AMI) that consists of the processor application. Create a launch template that uses the AMI. Create an Auto Scaling group using the launch template. Set the scaling policy for the Auto Scaling group to add and remove nodes based on the number of items in the SQS queue.
+- D. Create an Amazon SNS topic to send the jobs that need to be processed. Create an Amazon Machine Image (AMI) that consists of the processor application. Create a launch template that uses the AMI. Create an Auto Scaling group using the launch template. Set the scaling policy for the Auto Scaling group to add and remove nodes based on the number of messages published to the SNS topic.
+
+C
+
+### 82
+A company hosts its web applications in the AWS Cloud. The company configures Elastic Load Balancers to use certificates that are imported into AWS Certificate Manager (ACM). The company's security team must be notified 30 days before the expiration of each certificate.  
+What should a solutions architect recommend to meet this requirement?
+
+- A. Add a rule in ACM to publish a custom message to an Amazon Simple Notification Service (Amazon SNS) topic every day, beginning 30 days before any certificate will expire.
+- B. Create an AWS Config rule that checks for certificates that will expire within 30 days. Configure Amazon EventBridge (Amazon CloudWatch Events) to invoke a custom alert by way of Amazon Simple Notification Service (Amazon SNS) when AWS Config reports a noncompliant resource.
+- C. Use AWS Trusted Advisor to check for certificates that will expire within 30 days. Create an Amazon CloudWatch alarm that is based on Trusted Advisor metrics for check status changes. Configure the alarm to send a custom alert by way of Amazon Simple Notification Service (Amazon SNS).
+- D. Create an Amazon EventBridge (Amazon CloudWatch Events) rule to detect any certificates that will expire within 30 days. Configure the rule to invoke an AWS Lambda function. Configure the Lambda function to send a custom alert by way of Amazon Simple Notification Service (Amazon SNS).
+
+https://aws.amazon.com/jp/blogs/security/how-to-monitor-expirations-of-imported-certificates-in-aws-certificate-manager-acm/#:~:text=The%20first%20of,email%20or%20SNS. The first of the two options I describe is to use the ACM built-in Certificate Expiration event, which is raised through Amazon EventBridge, to invoke a Lambda function. In this option, the function is configured to publish the result as a finding in Security Hub, and also as an SNS topic used for email subscriptions. As a result, an administrator can be notified of a specific expiring certificate, or an IT service management (ITSM) system can automatically open a case or incident through email or SNS.
+
+D
+
+### 83
+A company's dynamic website is hosted using on-premises servers in the United States. The company is launching its product in Europe, and it wants to optimize site loading times for new European users. The site's backend must remain in the United States. The product is being launched in a few days, and an immediate solution is needed.  
+What should the solutions architect recommend?
+
+- A. Launch an Amazon EC2 instance in us-east-1 and migrate the site to it.
+- B. Move the website to Amazon S3. Use Cross-Region Replication between Regions.
+- C. Use Amazon CloudFront with a custom origin pointing to the on-premises servers.
+- D. Use an Amazon Route 53 geoproximity routing policy pointing to on-premises servers.
+
+To use CloudFront, the company can set up a custom origin pointing to their on-premises servers in the United States. CloudFront will then cache the content of the website at edge locations around the world and serve the content to users from the location that is closest to them. This will allow the company to optimize the loading times for their European users without having to move the backend of the website to a different region.
+
+C
+
+### 84
+A company wants to reduce the cost of its existing three-tier web architecture. The web, application, and database servers are running on Amazon EC2 instances for the development, test, and production environments. The EC2 instances average 30% CPU utilization during peak hours and 10% CPU utilization during non-peak hours.
+The production EC2 instances run 24 hours a day. The development and test EC2 instances run for at least 8 hours each day. The company plans to implement automation to stop the development and test EC2 instances when they are not in use.
+Which EC2 instance purchasing solution will meet the company's requirements MOST cost-effectively?
+
+A. Use Spot Instances for the production EC2 instances. Use Reserved Instances for the development and test EC2 instances.
+B. Use Reserved Instances for the production EC2 instances. Use On-Demand Instances for the development and test EC2 instances.
+C. Use Spot blocks for the production EC2 instances. Use Reserved Instances for the development and test EC2 instances.
+D. Use On-Demand Instances for the production EC2 instances. Use Spot blocks for the development and test EC2 instances.
+
+Option B, would indeed be the most cost-effective solution. Reserved Instances provide cost savings for instances that run consistently, such as the production environment in this case, while On-Demand Instances offer flexibility and are suitable for instances with variable usage patterns like the development and test environments. This combination ensures cost optimization based on the specific requirements and usage patterns described in the question.
+
+B
+
+### 85
+A company has a production web application in which users upload documents through a web interface or a mobile app. According to a new regulatory requirement. new documents cannot be modified or deleted after they are stored.  
+What should a solutions architect do to meet this requirement?
+
+- A. Store the uploaded documents in an Amazon S3 bucket with S3 Versioning and S3 Object Lock enabled.
+- B. Store the uploaded documents in an Amazon S3 bucket. Configure an S3 Lifecycle policy to archive the documents periodically.
+- C. Store the uploaded documents in an Amazon S3 bucket with S3 Versioning enabled. Configure an ACL to restrict all access to read-only.
+- D. Store the uploaded documents on an Amazon Elastic File System (Amazon EFS) volume. Access the data by mounting the volume in read-only mode.
+
+Versioning is required and automatically activated as Object Lock is enabled.
+
+A
+
+### 86
+A company has several web servers that need to frequently access a common Amazon RDS MySQL Multi-AZ DB instance. The company wants a secure method for the web servers to connect to the database while meeting a security requirement to rotate user credentials frequently.  
+Which solution meets these requirements?
+
+- A. Store the database user credentials in AWS Secrets Manager. Grant the necessary IAM permissions to allow the web servers to access AWS Secrets Manager.
+- B. Store the database user credentials in AWS Systems Manager OpsCenter. Grant the necessary IAM permissions to allow the web servers to access OpsCenter.
+- C. Store the database user credentials in a secure Amazon S3 bucket. Grant the necessary IAM permissions to allow the web servers to retrieve credentials and access the database.
+- D. Store the database user credentials in files encrypted with AWS Key Management Service (AWS KMS) on the web server file system. The web server should be able to decrypt the files and access the database.
+
+A
+
+AWS manageed secret manager is better
+
+### 87
+A company hosts an application on AWS Lambda functions that are invoked by an Amazon API Gateway API. The Lambda functions save customer data to an Amazon Aurora MySQL database. Whenever the company upgrades the database, the Lambda functions fail to establish database connections until the upgrade is complete. The result is that customer data is not recorded for some of the event.  
+A solutions architect needs to design a solution that stores customer data that is created during database upgrades.  
+Which solution will meet these requirements?
+
+- A. Provision an Amazon RDS proxy to sit between the Lambda functions and the database. Configure the Lambda functions to connect to the RDS proxy.
+- B. Increase the run time of the Lambda functions to the maximum. Create a retry mechanism in the code that stores the customer data in the database.
+- C. Persist the customer data to Lambda local storage. Configure new Lambda functions to scan the local storage to save the customer data to the database.
+- D. Store the customer data in an Amazon Simple Queue Service (Amazon SQS) FIFO queue. Create a new Lambda function that polls the queue and stores the customer data in the database.
+
+The original question was about handling a situation where the database is unavailable due to an upgrade, not a failover situation. During a database upgrade, the database instance is not available, and RDS Proxy would not be able to connect to a new database instance because there isn’t one. In this specific scenario, using Amazon SQS as described in option D provides a buffer for the incoming data during the period when the database is unavailable. This ensures that no data is lost, and it can be written to the database once the upgrade is complete.
+
+D
+
+### 88
+
+A survey company has gathered data for several years from areas in the United States. The company hosts the data in an Amazon S3 bucket that is 3 TB in size and growing. The company has started to share the data with a European marketing firm that has S3 buckets. The company wants to ensure that its data transfer costs remain as low as possible.  
+Which solution will meet these requirements?
+
+- A. Configure the Requester Pays feature on the company's S3 bucket. (@Requester Pays 提供bucket的公司不需要支付, 请求公司支付所有传输价格)
+- B. Configure S3 Cross-Region Replication from the company's S3 bucket to one of the marketing firm's S3 buckets. (@控制粒度可以达到bucket)
+- C. Configure cross-account access for the marketing firm so that the marketing firm has access to the company's S3 bucket.
+- D. Configure the company's S3 bucket to use S3 Intelligent-Tiering. Sync the S3 bucket to one of the marketing firm's S3 buckets.
+
+A
+
+### 89
+
+A company uses Amazon S3 to store its confidential audit documents. The S3 bucket uses bucket policies to restrict access to audit team IAM user credentials according to the principle of least privilege. Company managers are worried about accidental deletion of documents in the S3 bucket and want a more secure solution.  
+What should a solutions architect do to secure the audit documents?
+
+- A. Enable the versioning and MFA Delete features on the S3 bucket.
+- B. Enable multi-factor authentication (MFA) on the IAM user credentials for each audit team IAM user account.
+- C. Add an S3 Lifecycle policy to the audit team's IAM user accounts to deny the s3:DeleteObject action during audit dates.
+- D. Use AWS Key Management Service (AWS KMS) to encrypt the S3 bucket and restrict audit team IAM user accounts from accessing the KMS key.
+
+A
+### 90
+
+A company is using a SQL database to store movie data that is publicly accessible. The database runs on an Amazon RDS Single-AZ DB instance. A script runs queries at random intervals each day to record the number of new movies that have been added to the database. The script must report a final total during business hours.  
+The company's development team notices that the database performance is inadequate for development tasks when the script is running. A solutions architect must recommend a solution to resolve this issue.  
+Which solution will meet this requirement with the LEAST operational overhead?
+
+- A. Modify the DB instance to be a Multi-AZ deployment.
+- B. Create a read replica of the database. Configure the script to query only the read replica.
+- C. Instruct the development team to manually export the entries in the database at the end of each day.
+- D. Use Amazon ElastiCache to cache the common queries that the script runs against the database.
+
+B
+
+### 91
+A company has applications that run on Amazon EC2 instances in a VPC. One of the applications needs to call the Amazon S3 API to store and read objects. According to the company's security regulations, no traffic from the applications is allowed to travel across the internet.  
+Which solution will meet these requirements?
+
+- A. Configure an S3 gateway endpoint.
+- B. Create an S3 bucket in a private subnet.
+- C. Create an S3 bucket in the same AWS Region as the EC2 instances.
+- D. Configure a NAT gateway in the same subnet as the EC2 instances.
+
+S3 gateway endpoint: dedicated end-end and private
+
+A
+
+### 92
+A company is storing sensitive user information in an Amazon S3 bucket. The company wants to provide secure access to this bucket from the application tier running on Amazon EC2 instances inside a VPC.  
+Which combination of steps should a solutions architect take to accomplish this? (Choose two.)
+
+- A. Configure a VPC gateway endpoint for Amazon S3 within the VPC.
+- B. Create a bucket policy to make the objects in the S3 bucket public.
+- C. Create a bucket policy that limits access to only the application tier running in the VPC.
+- D. Create an IAM user with an S3 access policy and copy the IAM credentials to the EC2 instance. (@copying credentials which introduces a security risk.)
+- E. Create a NAT instance and have the EC2 instances use the NAT instance to access the S3 bucket.
+
+AC
+
+### 93(@?)
+A company runs an on-premises application that is powered by a MySQL database. The company is migrating the application to AWS to increase the application's elasticity and availability.  
+The current architecture shows heavy read activity on the database during times of normal operation. Every 4 hours, the company's development team pulls a full export of the production database to populate a database in the staging environment. During this period, users experience unacceptable application latency. The development team is unable to use the staging environment until the procedure completes.  
+A solutions architect must recommend replacement architecture that alleviates the application latency issue. The replacement architecture also must give the development team the ability to continue using the staging environment without delay.  
+Which solution meets these requirements?
+
+- A. Use Amazon Aurora MySQL with Multi-AZ Aurora Replicas for production. Populate the staging database by implementing a backup and restore process that uses the mysqldump utility.
+- B. Use Amazon Aurora MySQL with Multi-AZ Aurora Replicas for production. Use database cloning to create the staging database on-demand.
+- C. Use Amazon RDS for MySQL with a Multi-AZ deployment and read replicas for production. Use the standby instance for the staging database.
+- D. Use Amazon RDS for MySQL with a Multi-AZ deployment and read replicas for production. Populate the staging database by implementing a backup and restore process that uses the mysqldump utility.
+
+The recommended solution is Option B: Use Amazon Aurora MySQL with Multi-AZ Aurora Replicas for production. Use database cloning to create the staging database on-demand.
+
+To alleviate the application latency issue, the recommended solution is to use Amazon Aurora MySQL with Multi-AZ Aurora Replicas for production, and use database cloning to create the staging database on-demand. This allows the development team to continue using the staging environment without delay, while also providing elasticity and availability for the production application.
+
+Therefore, Options A, C, and D are not recommended
+
+- **Amazon Aurora MySQL with Multi-AZ Aurora Replicas** provides high availability and performance, which is essential for handling heavy read activity.
+- **Database cloning** allows for quick and easy creation of a staging database, eliminating the need for a lengthy backup and restore process. This ensures that the staging environment is always available for development and testing.
+- **Multi-AZ Aurora Replicas** provide redundancy and disaster recovery, ensuring that the application remains available even in the event of a failure.
+
+Other options don't fully address the requirements:
+
+- **A:** Using mysqldump for backups and restores can be time-consuming and can impact application performance.
+- **C:** While using the standby instance as the staging database can reduce latency, it may not be ideal for development and testing as it is a production instance.
+- **D:** Similar to option A, using mysqldump for backups and restores can be time-consuming and impact application performance.
+
+B
+### 94
+A company is designing an application where users upload small files into Amazon S3. After a user uploads a file, the file requires one-time simple processing to transform the data and save the data in JSON format for later analysis.  
+Each file must be processed as quickly as possible after it is uploaded. Demand will vary. On some days, users will upload a high number of files. On other days, users will upload a few files or no files.  
+Which solution meets these requirements with the LEAST operational overhead?
+
+- A. Configure Amazon EMR to read text files from Amazon S3. Run processing scripts to transform the data. Store the resulting JSON file in an Amazon Aurora DB cluster.
+- B. Configure Amazon S3 to send an event notification to an Amazon Simple Queue Service (Amazon SQS) queue. Use Amazon EC2 instances to read from the queue and process the data. Store the resulting JSON file in Amazon DynamoDB.
+- C. Configure Amazon S3 to send an event notification to an Amazon Simple Queue Service (Amazon SQS) queue. Use an AWS Lambda function to read from the queue and process the data. Store the resulting JSON file in Amazon DynamoDB.
+- D. Configure Amazon EventBridge (Amazon CloudWatch Events) to send an event to Amazon Kinesis Data Streams when a new file is uploaded. Use an AWS Lambda function to consume the event from the stream and process the data. Store the resulting JSON file in an Amazon Aurora DB cluster.
+
+EventBridge and Kinesis are typically used for real-time streaming and processing of large volumes of data.
+
+C
+
+### 95
+An application allows users at a company's headquarters to access product data. The product data is stored in an Amazon RDS MySQL DB instance. The operations team has isolated an application performance slowdown and wants to separate read traffic from write traffic. A solutions architect needs to optimize the application's performance quickly.  
+What should the solutions architect recommend?
+
+- A. Change the existing database to a Multi-AZ deployment. Serve the read requests from the primary Availability Zone.
+- B. Change the existing database to a Multi-AZ deployment. Serve the read requests from the secondary Availability Zone.
+- C. Create read replicas for the database. Configure the read replicas with half of the compute and storage resources as the source database.
+- D. Create read replicas for the database. Configure the read replicas with the same compute and storage resources as the source database.
+
+
+### 96
+An Amazon EC2 administrator created the following policy associated with an IAM group containing several users:  
+![](https://img.examtopics.com/aws-certified-solutions-architect-associate-saa-c03/image1.png)  
+What is the effect of this policy?
+
+- A. Users can terminate an EC2 instance in any AWS Region except us-east-1.
+- B. Users can terminate an EC2 instance with the IP address 10.100.100.1 in the us-east-1 Region.
+- C. Users can terminate an EC2 instance in the us-east-1 Region when the user's source IP is 10.100.100.254.
+- D. Users cannot terminate an EC2 instance in the us-east-1 Region when the user's source IP is 10.100.100.254.
+
+
+*CIDR（Classless Inter-Domain Routing）**とは、IPアドレスとサブネットマスクを組み合わせて、IPアドレスの範囲を効率的に表現する方式です。
+
+**10.100.100.0/24 の意味:**
+
+- **10.100.100.0:** ネットワーク内の最初のIPアドレスです。
+- **/24:** サブネットマスクを表し、この場合、255.255.255.0に相当します。これは、このネットワーク内の利用可能なIPアドレスが254個（10.100.100.1～10.100.100.254）であることを意味します。
+
+reserved IP address
+0.0/24 , the following five IP addresses are reserved:
+0.0: Network address.
+0.1: Reserved by AWS for the VPC router.
+0.2: Reserved by AWS. The IP address of the DNS server is the base of the VPC network range plus two. ...
+0.3: Reserved by AWS for future use.
+0.255: Network broadcast address.
+
+C
+### 97
+A company has a large Microsoft SharePoint deployment running on-premises that requires Microsoft Windows shared file storage. The company wants to migrate this workload to the AWS Cloud and is considering various storage options. The storage solution must be highly available and integrated with Active Directory for access control.  
+Which solution will satisfy these requirements?
+
+- A. Configure Amazon EFS storage and set the Active Directory domain for authentication.
+- B. Create an SMB file share on an AWS Storage Gateway file gateway in two Availability Zones.
+- C. Create an Amazon S3 bucket and configure Microsoft Windows Server to mount it as a volume.
+- D. Create an Amazon FSx for Windows File Server file system on AWS and set the Active Directory domain for authentication.
+
+Amazon FSx for Windows File Server is a fully managed file storage service that is designed to be used with Microsoft Windows workloads. It is integrated with Active Directory for access control and is highly available, as it stores data across multiple availability zones. Additionally, FSx can be used to migrate data from on-premises Microsoft Windows file servers to the AWS Cloud.
+
+D
+
+### 98
+An image-processing company has a web application that users use to upload images. The application uploads the images into an Amazon S3 bucket. The company has set up S3 event notifications to publish the object creation events to an Amazon Simple Queue Service (Amazon SQS) standard queue. The SQS queue serves as the event source for an AWS Lambda function that processes the images and sends the results to users through email.  
+Users report that they are receiving multiple email messages for every uploaded image. A solutions architect determines that SQS messages are invoking the Lambda function more than once, resulting in multiple email messages.  
+What should the solutions architect do to resolve this issue with the LEAST operational overhead?
+
+- A. Set up long polling in the SQS queue by increasing the ReceiveMessage wait time to 30 seconds.
+- B. Change the SQS standard queue to an SQS FIFO queue. Use the message deduplication ID to discard duplicate messages.
+- C. Increase the visibility timeout in the SQS queue to a value that is greater than the total of the function timeout and the batch window timeout.
+- D. Modify the Lambda function to delete each message from the SQS queue immediately after the message is read before processing.
+
+C
+
+### 99
+A company is implementing a shared storage solution for a gaming application that is hosted in an on-premises data center. The company needs the ability to use Lustre clients to access data. The solution must be fully managed.  
+Which solution meets these requirements?
+
+- A. Create an AWS Storage Gateway file gateway. Create a file share that uses the required client protocol. Connect the application server to the file share.
+- B. Create an Amazon EC2 Windows instance. Install and configure a Windows file share role on the instance. Connect the application server to the file share.
+- C. Create an Amazon Elastic File System (Amazon EFS) file system, and configure it to support Lustre. Attach the file system to the origin server. Connect the application server to the file system.
+- D. Create an Amazon FSx for Lustre file system. Attach the file system to the origin server. Connect the application server to the file system.
+
+Lustre in the question is only available as FSx
+
+D
+
+### 100
+A company's containerized application runs on an Amazon EC2 instance. The application needs to download security certificates before it can communicate with other business applications. The company wants a highly secure solution to encrypt and decrypt the certificates in near real time. The solution also needs to store data in highly available storage after the data is encrypted.  
+Which solution will meet these requirements with the LEAST operational overhead?
+
+- A. Create AWS Secrets Manager secrets for encrypted certificates. Manually update the certificates as needed. Control access to the data by using fine-grained IAM access.
+- B. Create an AWS Lambda function that uses the Python cryptography library to receive and perform encryption operations. Store the function in an Amazon S3 bucket.
+- C. Create an AWS Key Management Service (AWS KMS) customer managed key. Allow the EC2 role to use the KMS key for encryption operations. Store the encrypted data on Amazon S3.
+- D. Create an AWS Key Management Service (AWS KMS) customer managed key. Allow the EC2 role to use the KMS key for encryption operations. Store the encrypted data on Amazon Elastic Block Store (Amazon EBS) volumes.
+
+manual operation and fine grained IAM is overhead
+
+C
+
+
+
