--- a/SAA 981 - 900.md
+++ b/SAA 981 - 900.md
@@ -326,15 +326,28 @@ D. Encrypt the data by using client-side encryption with Amazon S3 managed keys.
 A
 
 ### Question #964
-A global ecommerce company uses a monolithic architecture. The company needs a solution to manage the increasing volume of product data.
-The solution must be scalable and have a modular service architecture. The company needs to maintain its structured database schemas. The company also needs a storage solution to store product data and product images.
+A global ecommerce company uses a monolithic architecture. The company needs a solution to manage the increasing volume of product data. The solution must be scalable and have a modular service architecture. The company needs to maintain its structured database schemas. The company also needs a storage solution to store product data and product images.
 Which solution will meet these requirements with the LEAST operational overhead?
-A. Use an Amazon EC2 instance in an Auto Scaling group to deploy a containerized application. Use an Application Load Balancer to distribute
-web traffic. Use an Amazon RDS DB instance to store product data and product images.
+A. Use an Amazon EC2 instance in an Auto Scaling group to deploy a containerized application. Use an Application Load Balancer to distribute web traffic. Use an Amazon RDS DB instance to store product data and product images.
 B. Use AWS Lambda functions to manage the existing monolithic application. Use Amazon DynamoDB to store product data and product images. Use Amazon Simple Notification Service (Amazon SNS) for event-driven communication between the Lambda functions.
 C. Use Amazon Elastic Kubernetes Service (Amazon EKS) with an Amazon EC2 deployment to deploy a containerized application. Use an Amazon Aurora cluster to store the product data. Use AWS Step Functions to manage workflows. Store the product images in Amazon S3 Glacier Deep Archive.
 D. Use Amazon Elastic Container Service (Amazon ECS) with AWS Fargate to deploy a containerized application. Use Amazon RDS with a Multi-AZ deployment to store the product data. Store the product images in an Amazon S3 bucket.
-Correct Answer:D
+
+D
+1. **Containerized Application with AWS Fargate**: ECS with AWS Fargate allows the company to run containerized applications without managing the underlying infrastructure. 
+    
+2. **Structured Database Schema in Amazon RDS**: Amazon RDS with Multi-AZ deployment is ideal for structured, relational data and provides high availability and fault tolerance. It maintains structured database schemas, aligning with the company's requirement for structured data storage and reliability.
+    
+3. **Product Image Storage in Amazon S3**: Amazon S3 is a cost-effective, scalable storage solution well-suited for storing unstructured data such as product images. It allows for direct retrieval and offers flexible storage options, including various classes like S3 Standard and S3 Intelligent-Tiering, which can help manage costs.
+    
+
+### Why Other Options Are Less Suitable:
+
+- **Option A**: Using an EC2 instance with Auto Scaling adds more operational overhead than Fargate. Managing EC2 instances, even with scaling, is more resource-intensive as it requires managing instance configurations, scaling policies, patching, and more.
+    
+- **Option B**: Although AWS Lambda offers a serverless approach, managing a monolithic application with Lambda functions is challenging. Amazon DynamoDB is NoSQL, which does not natively support structured schemas as required, making it less suitable for this structured product data.
+    
+- **Option C**: Amazon EKS requires managing and configuring a Kubernetes cluster, which adds significant operational overhead. S3 Glacier Deep Archive is not ideal for product images due to high latency and cost for frequent access. Aurora in an EKS environment may be more than necessary for this use case, as ECS with RDS provides a simpler, lower-maintenance solution.
 
 ### Question #963 Topic 1
 A solutions architect is designing the cloud architecture for a new stateless application that will be deployed on AWS. The solutions architect created an Amazon Machine Image (AMI) and launch template for the application.
@@ -445,21 +458,207 @@ D. Deploy Amazon EC2 On-Demand Instances to run the batch jobs. Store the data i
 
 Correct Answer: D
 
-### Question #955
-A company runs a web application on Amazon EC2 instances in an Auto Scaling group behind an Application Load Balancer (ALB). The application stores data in an Amazon Aurora MySQL DB cluster.
-The company needs to create a disaster recovery (DR) solution. The acceptable recovery time for the DR solution is up to 30 minutes. The DR solution does not need to support customer usage when the primary infrastructure is healthy.
+## Question #955
+A company runs a web application on Amazon EC2 instances in an Auto Scaling group behind an Application Load Balancer (ALB). The application stores data in an Amazon Aurora MySQL DB cluster. The company needs to create a disaster recovery (DR) solution. The acceptable recovery time for the DR solution is up to 30 minutes. The DR solution does not need to support customer usage when the primary infrastructure is healthy.
 Which solution will meet these requirements?
 
-A. Deploy the DR infrastructure in a second AWS Region with an ALB and an Auto Scaling group. Set the desired capacity and maximum
-capacity of the Auto Scaling group to a minimum value. Convert the Aurora MySQL DB cluster to an Aurora global database. Configure
-Amazon Route 53 for an active-passive failover with ALB endpoints.
-B. Deploy the DR infrastructure in a second AWS Region with an ALUpdate the Auto Scaling group to include EC2 instances from the second
-Region. Use Amazon Route 53 to configure active-active failover. Convert the Aurora MySQL DB cluster to an Aurora global database.
-C. Back up the Aurora MySQL DB cluster data by using AWS Backup. Deploy the DR infrastructure in a second AWS Region with an ALB.
-Update the Auto Scaling group to include EC2 instances from the second Region. Use Amazon Route 53 to configure active-active failover.
+A. Deploy the DR infrastructure in a second AWS Region with an ALB and an Auto Scaling group. Set the desired capacity and maximum capacity of the Auto Scaling group to a minimum value. Convert the Aurora MySQL DB cluster to an Aurora global database. Configure Amazon Route 53 for an **active-passive failover** with ALB endpoints.
+B. Deploy the DR infrastructure in a second AWS Region with an ALUpdate the Auto Scaling group to include EC2 instances from the second Region. Use Amazon Route 53 to configure active-active failover. Convert the Aurora MySQL DB cluster to an Aurora global database.
+C. Back up the Aurora MySQL DB cluster data by using AWS Backup. Deploy the DR infrastructure in a second AWS Region with an ALB. Update the Auto Scaling group to include EC2 instances from the second Region. Use Amazon Route 53 to configure active-active failover.
 Create an Aurora MySQL DB cluster in the second Region Restore the data from the backup.
 D. Back up the infrastructure configuration by using AWS Backup. Use the backup to create the required infrastructure in a second AWS
 Region. Set the Auto Scaling group desired capacity to zero. Use Amazon Route 53 to configure active-passive failover. Convert the Aurora
 MySQL DB cluster to an Aurora global database.
 
 Correct Answer:A
+
+https://docs.aws.amazon.com/whitepapers/latest/disaster-recovery-workloads-on-aws/disaster-recovery-options-in-the-cloud.html
+
+DR => use IaC service
+
+![](https://docs.aws.amazon.com/images/whitepapers/latest/disaster-recovery-workloads-on-aws/images/disaster-recovery-strategies.png)
+
+The best answer here is:
+
+**A. Deploy the DR infrastructure in a second AWS Region with an ALB and an Auto Scaling group. Set the desired capacity and maximum capacity of the Auto Scaling group to a minimum value. Convert the Aurora MySQL DB cluster to an Aurora global database. Configure Amazon Route 53 for an active-passive failover with ALB endpoints.**
+
+### Explanation:
+
+1. **Recovery Time Objective (RTO)**: The RTO requirement is 30 minutes, which means that the DR solution needs to be up and running within that time if a disaster occurs. Option A provides a setup where the DR infrastructure is in a standby state in a second AWS Region, ready to scale up when needed. Setting the Auto Scaling group's desired and maximum capacity to a minimum value allows it to quickly scale up when the DR plan is activated.
+
+2. **Aurora Global Database**: Converting the Aurora MySQL DB cluster to an Aurora global database is ideal for DR across regions, as this allows for low-latency replication between the primary and secondary regions. If there is a failover, the secondary region can promote its Aurora database to be the new primary, meeting the recovery time requirements.
+
+3. **Active-Passive Failover with Route 53**: An active-passive setup ensures that the secondary region is only used when there is a failure in the primary region. With Route 53 configured for active-passive failover, traffic will automatically redirect to the DR region if the primary region becomes unavailable, ensuring minimal downtime.
+
+### Why Other Options Are Less Suitable:
+
+- **Option B**: Active-active failover is unnecessary here, as it would keep the DR resources active in both regions, which is more costly. Active-passive (as in Option A) is preferred because the DR setup does not need to support customer usage when the primary infrastructure is healthy.
+  
+- **Option C**: Using AWS Backup for regular backups would increase the recovery time because restoring an Aurora MySQL database from a backup is time-intensive, and does not guarantee meeting the 30-minute RTO. A global Aurora database, as in Option A, is more effective for cross-region DR.
+
+- **Option D**: Similar to Option C, this solution relies on creating infrastructure from a backup, which is not ideal for the 30-minute RTO requirement. Additionally, Aurora global database support offers faster and more reliable failover compared to restoring from AWS Backup.
+
+
+## 954
+A company is developing machine learning (ML) models on AWS. The company is developing the ML models as independent microservices. The microservices fetch approximately 1 GB of model data from Amazon S3 at startup and load the data into memory. Users access the ML models through an asynchronous API. Users can send a request or a batch of requests.
+The company provides the ML models to hundreds of users. The usage patterns for the models are irregular. Some models are not used for days or weeks. Other models receive batches of thousands of requests at a time.
+Which solution will meet these requirements?
+
+A. Direct the requests from the API to a Network Load Balancer (NLB). Deploy the ML models as AWS Lambda functions that the NLB will invoke. Use auto scaling to scale the Lambda functions based on the traffic that the NLB receives.
+
+B. Direct the requests from the API to an Application Load Balancer (ALB). Deploy the ML models as Amazon Elastic Container Service (Amazon ECS) services that the ALB will invoke. Use auto scaling to scale the ECS cluster instances based on the traffic that the ALB receives.
+
+C. Direct the requests from the API into an Amazon Simple Queue Service (Amazon SQS) queue. Deploy the ML models as AWS Lambda
+functions that SQS events will invoke. Use auto scaling to increase the number of vCPUs for the Lambda functions based on the size of the SQS queue.
+
+D. Direct the requests from the API into an Amazon Simple Queue Service (Amazon SQS) queue. Deploy the ML models as Amazon ElasticContainer Service (Amazon ECS) services that read from the queue. Use auto scaling for Amazon ECS to scale both the cluster capacity and number of the services based on the size of the SQS queue.
+
+A: 1GB ram in lambda is fucked up
+B:  not async 
+C: again lambda
+D
+
+## 953
+A company has a web application that has thousands of users. The application uses 8-10 user-uploaded images to generate AI images. Users can download the generated AI images once every 6 hours. The company also has a premium user option that gives users the ability to download the generated AI images anytime.
+The company uses the user-uploaded images to run AI model training twice a year. The company needs a storage solution to store the images.
+Which storage solution meets these requirements MOST cost-effectively?
+A. Move uploaded images to Amazon S3 Glacier Deep Archive. Move premium user-generated AI images to S3 Standard. Move non-premium user-generated AI images to S3 Standard-Infrequent Access (S3 Standard-IA).
+B. Move uploaded images to Amazon S3 Glacier Deep Archive Move all generated AI images to S3 Glacier Flexible Retrieval.
+C. Move uploaded images to Amazon S3 One Zone-Infrequent Access (S3 One Zone-IA). Move premium user-generated AI images to S3 Standard. Move non-premium user-generated AI images to S3 Standard-Infrequent Access (S3 Standard-IA).
+D. Move uploaded images to Amazon S3 One Zone-Infrequent Access (S3 One Zone-IA). Move all generated AI images to S3 Glacier Flexible Retrieval.
+
+C
+
+**ploaded Images in S3 One Zone-IA**: Since the uploaded images are only used twice a year for model training, they can be stored in **S3 One Zone-IA**. This storage class is highly cost-effective for infrequently accessed data that does not require multi-AZ resilience. Since occasional loss of data is acceptable for training purposes (as they can be re-uploaded by users if needed), S3 One Zone-IA is suitable and cost-efficient.
+
+## Question #952 Topic 1
+A company wants to move its application to a serverless solution. The serverless solution needs to analyze existing data and new data by using SQL. The company stores the data in an Amazon S3 bucket. The data must be encrypted at rest and replicated to a different AWS Region.
+Which solution will meet these requirements with the LEAST operational overhead?
+A. Create a new S3 bucket that uses server-side encryption with AWS KMS multi-Region keys (SSE-KMS). Configure Cross-Region Replication (CRR). Load the data into the new S3 bucket. Use [[Amazon Athena]] to query the data.
+B. Create a new S3 bucket that uses server-side encryption with Amazon S3 managed keys (SSE-S3). Configure Cross-Region Replication (CRR). Load the data into the new S3 bucket. Use Amazon RDS to query the data.
+C. Configure Cross-Region Replication (CRR) on the existing S3 bucket. Use server-side encryption with Amazon S3 managed keys (SSE-S3). Use Amazon Athena to query the data.
+D. Configure S3 Cross-Region Replication (CRR) on the existing S3 bucket. Use server-side encryption with AWS KMS multi-Region keys (SSEKMS).
+Use Amazon RDS to query the data.
+
+A
+
+SSE-S3 encrypted objects can be accessed only within the same region where they are stored. This is because the decryption process for SSE-S3 requires access to S3’s managed encryption keys in that specific region. => no cross region key sharing => choose KMS
+
+## 951
+A company has a custom application with embedded credentials that retrieves information from a database in an Amazon RDS for MySQL DB cluster. The company needs to make the application more secure with minimal programming effort. The company has created credentials on the RDS for MySQL database for the application user.
+Which solution will meet these requirements?
+A. Store the credentials in AWS Key Management Service ([[AWS KMS]]). Create keys in AWS KMS. Configure the application to load the database credentials from AWS KMS. Enable automatic key rotation
+B. Store the credentials in encrypted local storage. Configure the application to load the database credentials from the local storage. Set up a credentials rotation schedule by creating a cron job.
+C. Store the credentials in [[AWS Secrets Manager]]. Configure the application to load the database credentials from Secrets Manager. Set up a credentials rotation schedule by creating an AWS Lambda function for Secrets Manager.
+D. Store the credentials in [[AWS Systems Manager Parameter Store.]] Configure the application to load the database credentials from Parameter Store. Set up a credentials rotation schedule in the RDS for MySQL database by using Parameter Store.
+
+The best answer here is:
+
+**C. Store the credentials in AWS Secrets Manager. Configure the application to load the database credentials from Secrets Manager. Set up a credentials rotation schedule by creating an AWS Lambda function for Secrets Manager.**
+
+### Explanation:
+
+1. **AWS Secrets Manager**: Secrets Manager is designed for securely storing, managing, and automatically rotating sensitive information such as database credentials. It provides an easy-to-use interface to retrieve secrets and supports encryption automatically. Secrets Manager integrates directly with Amazon RDS, making it an ideal solution for storing and managing database credentials with minimal code changes.
+
+2. **Automatic Rotation of Credentials**: AWS Secrets Manager has built-in support for automatic rotation of credentials for RDS databases. When rotation is enabled, Secrets Manager automatically rotates the credentials using an AWS Lambda function, which reduces operational overhead and improves security. This rotation feature also minimizes the programming effort needed to maintain secure, updated credentials.
+
+3. **Minimal Code Changes**: Configuring the application to fetch credentials from Secrets Manager instead of hardcoding them or storing them locally typically requires minimal code changes. Secrets Manager provides an SDK and API, making it simple to retrieve credentials dynamically when the application starts.
+
+### Why Other Options Are Less Suitable:
+
+- **Option A**: AWS Key Management Service (KMS) is designed for encryption and key management rather than for storing and rotating database credentials. KMS alone does not offer a direct mechanism to securely store and automatically rotate credentials.
+
+- **Option B**: Storing credentials in encrypted local storage with a cron job for rotation requires more manual management and increases operational complexity. It also does not provide the same level of security or automation as Secrets Manager, as the credentials are stored locally rather than securely managed in AWS.
+
+- **Option D**: AWS Systems Manager Parameter Store can store plain text and encrypted parameters, but it does not support automatic rotation for database credentials. Parameter Store would require additional scripting and manual setup for rotation, which introduces more complexity than Secrets Manager.
+
+### Conclusion:
+
+**Option C** is the most secure and efficient solution with minimal programming effort, leveraging AWS Secrets Manager’s built-in support for securely storing, retrieving, and automatically rotating RDS database credentials.
+
+## 950
+A solutions architect needs to connect a company's corporate network to its VPC to allow on-premises access to its AWS resources. The solution must provide encryption of all traffic between the corporate network and the VPC at the network layer and the session layer. The solution also must provide security controls to prevent unrestricted access between AWS and the on-premises systems.
+Which solution meets these requirements?
+A. Configure AWS Direct Connect to connect to the VPC. Configure the VPC route tables to allow and deny traffic between AWS and on premises as required.
+B. Create an IAM policy to allow access to the AWS Management Console only from a defined set of corporate IP addresses. Restrict user access based on job responsibility by using an IAM policy and roles.
+C. Configure AWS Site-to-Site VPN to connect to the VPConfigure route table entries to direct traffic from on premises to the VPConfigure instance security groups and network ACLs to allow only required traffic from on premises.
+D. Configure AWS Transit Gateway to connect to the VPC. Configure route table entries to direct traffic from on premises to the VPC. Configure instance security groups and network ACLs to allow only required traffic from on premises.
+
+The best answer here is:
+C
+### Explanation:
+
+1. **Encryption Requirements**: AWS Site-to-Site VPN provides encryption for all traffic between the corporate network and the VPC at the **network layer** (using IPsec) and the session layer, meeting the requirement for secure, encrypted communication.
+
+2. **Access Control with Security Groups and Network ACLs**: Security groups and network ACLs can be configured to allow or deny specific types of traffic between the VPC and on-premises network. This provides granular control to prevent unrestricted access, ensuring that only required traffic is allowed.
+
+3. **Cost-Effectiveness and Ease of Setup**: AWS Site-to-Site VPN is a relatively quick and cost-effective solution for securely connecting on-premises networks to a VPC, especially if the bandwidth requirements are not high enough to justify using AWS Direct Connect.
+
+### Why Other Options Are Less Suitable:
+
+- **Option A**: AWS Direct Connect provides a dedicated network connection between the corporate network and AWS, but it does not provide built-in encryption. To meet the encryption requirement, AWS Direct Connect would need to be combined with a VPN overlay, which adds complexity and cost.
+
+- **Option B**: IAM policies control access to the AWS Management Console and AWS services. do nothing with network
+
+- **Option D**: AWS Transit Gateway can connect multiple VPCs and on-premises networks, providing a scalable solution for complex network architectures. However, Transit Gateway itself does not provide encryption. Similar to Direct Connect, you would need to pair Transit Gateway with AWS Site-to-Site VPN to meet the encryption requirement, which adds complexity unless multiple VPCs are involved.
+
+### Conclusion:
+
+**Option C** meets all requirements effectively and with minimal complexity by providing secure, encrypted connectivity through AWS Site-to-Site VPN, along with security controls through security groups and network ACLs.
+
+### 949
+A company has a multi-tier web application. The application's internal service components are deployed on Amazon EC2 instances. The internal service components need to access third-party software as a service (SaaS) APIs that are hosted on AWS. The company needs to provide secure and private connectivity from the application's internal services to the third-party SaaS application. The
+company needs to ensure that there is minimal public internet exposure. Which solution will meet these requirements?
+A. Implement an AWS Site-to-Site VPN to establish a secure connection with the third-party SaaS provider.
+B. Deploy AWS Transit Gateway to manage and route traffic between the application's VPC and the third-party SaaS provider.
+C. Configure AWS PrivateLink to allow only outbound traffic from the VPC without enabling the third-party SaaS provider to establish.
+D. Use AWS PrivateLink to create a private connection between the application's VPC and the third-party SaaS provider.
+
+The best answer here is:
+D
+
+### Explanation:
+
+1. **AWS PrivateLink for Secure and Private Connectivity**: AWS PrivateLink allows secure, private connectivity between VPCs and supported AWS services or third-party SaaS applications over the AWS network without exposing traffic to the public internet. PrivateLink provides private endpoints within your VPC that can securely communicate with the SaaS provider's services.
+
+2. **Minimizing Public Internet Exposure**: Since PrivateLink uses the **AWS private network,** it does not expose traffic to the public internet, meeting the company’s requirement for minimal internet exposure. This ensures that all communication between the internal services and the third-party SaaS application remains private and secure.
+
+3. **Simplified Setup and Management**: Using AWS PrivateLink is straightforward and does not require complex network configurations or VPN connections, making it an efficient solution for private, secure connectivity.
+
+### Why Other Options Are Less Suitable:
+
+- **Option A (AWS Site-to-Site VPN)**: A Site-to-Site VPN would require routing traffic over the internet, even if encrypted, which contradicts the requirement for minimal **public internet** exposure. Additionally, VPN connections introduce additional configuration complexity and latency.
+
+- **Option B (AWS Transit Gateway)**: AWS Transit Gateway provides centralized routing across multiple VPCs and on-premises networks but does not directly create a private connection with a third-party SaaS provider. It also does not inherently provide private connectivity to third-party SaaS applications without exposing traffic to the public internet.
+
+- **Option C (AWS PrivateLink for Outbound Traffic Only)**: Configuring AWS PrivateLink to allow only outbound traffic without enabling a full private connection would limit the application's ability to establish a direct, secure link with the third-party SaaS. PrivateLink is designed to enable a fully private endpoint-to-endpoint connection, which would best serve the requirement.
+
+## Question #948 Topic 1
+A company wants to replicate existing and ongoing data changes from an on-premises Oracle database to Amazon RDS for Oracle. The amount of data to replicate varies throughout each day. The company wants to use AWS Database Migration Service (AWS DMS) for data replication. The solution must allocate only the capacity that the replication instance requires.
+Which solution will meet these requirements?
+A. Configure the AWS DMS replication instance with a Multi-AZ deployment to provision instances across multiple Availability Zones.
+B. Create an AWS DMS Serverless replication task to analyze and replicate the data while provisioning the required capacity.
+C. Use Amazon EC2 Auto Scaling to scale the size of the AWS DMS replication instance up or down based on the amount of data toreplicate.
+D. Provision AWS DMS replication capacity by using Amazon Elastic Container Service (Amazon ECS) with an AWS Fargate launch type to analyze and replicate the data while provisioning the required capacity.
+
+B
+
+1. **AWS DMS Serverless**: AWS DMS Serverless automatically provisions the necessary compute resources based on the workload, which means it can scale up or down according to the data changes that need to be replicated. This option eliminates the need for manual capacity provisioning and management, allowing the company to only pay for the capacity that is actually required.
+
+2. **Cost Efficiency**: By using AWS DMS Serverless, the company avoids the fixed costs associated with provisioning a dedicated replication instance, particularly during periods of low activity. This aligns perfectly with the requirement of allocating only the capacity that the replication instance requires.
+
+3. **Ease of Use**: AWS DMS Serverless simplifies the process of managing replication tasks, as it handles the underlying infrastructure automatically without the need for configuration of EC2 instances or manual scaling.
+
+### Why Other Options Are Less Suitable:
+
+- **Option A (Multi-AZ Deployment)**: Configuring a Multi-AZ deployment for AWS DMS replication instances is useful for high availability and fault tolerance but does not address the requirement for dynamically allocating capacity based on workload. Multi-AZ deployments also incur additional costs due to the provisioning of standby instances.
+
+- **Option C (Amazon EC2 Auto Scaling)**: While EC2 Auto Scaling can be used to scale instances based on workload, AWS DMS replication instances are managed independently from EC2 instances. AWS DMS does not support Auto Scaling directly; therefore, this option is not applicable.
+
+- **Option D (ECS with Fargate)**: Using Amazon ECS with Fargate would be a more complex solution for this use case. AWS DMS already provides built-in capabilities for data migration and replication, and introducing ECS would add unnecessary overhead and complexity.
+
+### Conclusion:
+
+**Option B** is the optimal solution as it allows for efficient and automatic provisioning of replication resources based on real-time needs, aligning perfectly with the company’s requirements for dynamic capacity allocation and cost management.
+
+## 947
