--- a/SAA 981 - 900.md
+++ b/SAA 981 - 900.md
@@ -662,3 +662,49 @@ B
 **Option B** is the optimal solution as it allows for efficient and automatic provisioning of replication resources based on real-time needs, aligning perfectly with the company’s requirements for dynamic capacity allocation and cost management.
 
 ## 947
+
+## 904
+A company has an application that customers use to upload images to an Amazon S3 bucket. Each night, the company launches an Amazon EC2 pot Fleet that processes all the images that the company received that day. The processing for each image takes 2 minutes and requires 512 MB of memory.
+A solutions architect needs to change the application to process the images when the images are uploaded.
+Which change will meet these requirements MOST cost-effectively?
+
+A. Use S3 Event Notifications to write a message with image details to an Amazon Simple Queue Service (Amazon SQS) queue. Configure an AWS Lambda function to read the messages from the queue and to process the images.
+B. Use S3 Event Notifications to write a message with image details to an Amazon Simple Queue Service (Amazon SQS) queue. Configure an EC2 Reserved Instance to read the messages from the queue and to process the images.
+C. Use S3 Event Notifications to publish a message with image details to an Amazon Simple Notification Service (Amazon SNS) topic. Configure a container instance in Amazon Elastic Container Service (Amazon ECS) to subscribe to the topic and to process the images.
+D. Use S3 Event Notifications to publish a message with image details to an Amazon Simple Notification Service (Amazon SNS) topic. Configure an AWS Elastic Beanstalk application to subscribe to the topic and to process the images.
+
+A
+## 903
+A company manages a data lake in an Amazon S3 bucket that numerous applications access. The S3 bucket contains a unique prefix for each application. The company wants to restrict each application to its specific prefix and to have granular control of the objects under each prefix.
+Which solution will meet these requirements with the LEAST operational overhead?
+A. Create dedicated S3 access points and access point policies for each application.
+B. Create an S3 Batch Operations job to set the ACL permissions for each object in the S3 bucket.
+C. Replicate the objects in the S3 bucket to new S3 buckets for each application. Create replication rules by prefix.
+D. Replicate the objects in the S3 bucket to new S3 buckets for each application. Create dedicated S3 access points for each application.
+
+Access Point : https://aws.amazon.com/s3/features/access-points/
+
+S3 Access Points: These provide a way to manage access to shared data sets in Amazon S3. Each access point has a unique hostname and a policy that is specific to the use case, allowing for granular control over access to data.
+Access Point Policies: These policies can be tailored to restrict access to specific prefixes within an S3 bucket, ensuring that each application only has access to its designated prefix.
+
+## 902
+A company wants to migrate an application to AWS. The company wants to increase the application's current availability. The company wants to use AWS WAF in the application's architecture.
+Which solution will meet these requirements?
+A. Create an Auto Scaling group that contains multiple Amazon EC2 instances that host the application across two Availability Zones. Configure an Application Load Balancer (ALB) and set the Auto Scaling group as the target. Connect a WAF to the ALB.
+B. Create a cluster placement group that contains multiple Amazon EC2 instances that hosts the application. Configure an Application Load Balancer and set the EC2 instances as the targets. Connect a WAF to the placement group.
+C. Create two Amazon EC2 instances that host the application across two Availability Zones. Configure the EC2 instances as the targets of an Application Load Balancer (ALB). Connect a WAF to the ALB.
+D. Create an Auto Scaling group that contains multiple Amazon EC2 instances that host the application across two Availability Zones.
+Configure an Application Load Balancer (ALB) and set the Auto Scaling group as the target. Connect a WAF to the Auto Scaling group.
+A
+
+## 901
+A company is migrating its workloads to AWS. The company has sensitive and critical data in on-premises relational databases that run on SQL Server instances. The company wants to use the AWS Cloud to increase security and reduce operational overhead for the databases.
+Which solution will meet these requirements?
+A. Migrate the databases to Amazon EC2 instances. Use an AWS Key Management Service (AWS KMS) AWS managed key for encryption.
+B. Migrate the databases to a Multi-AZ Amazon RDS for SQL Server DB instance. Use an AWS Key Management Service (AWS KMS) AWS managed key for encryption.
+C. Migrate the data to an Amazon S3 bucket. Use Amazon Macie to ensure data security.
+D. Migrate the databases to an Amazon DynamoDB table. Use Amazon CloudWatch Logs to ensure data security.
+
+B
+
+
